--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
             </div>
             <div class="text-center">
                 <p class="footer-copy">
-                    &copy; 2025 Your Website. All Rights Reserved.
+                    &copy; 2025 Dog Training. All Rights Reserved to EMA.
                 </p>
             </div>
         </div>
